--- a/task_buddies_react_app-main/package.json
+++ b/task_buddies_react_app-main/package.json
@@ -15,9 +15,11 @@
 		"@fortawesome/free-solid-svg-icons": "^6.4.0",
 		"@fortawesome/react-fontawesome": "^0.2.0",
 		"@reduxjs/toolkit": "^1.9.5",
+		"chart.js": "^4.3.3",
 		"jwt-decode": "^3.1.2",
 		"moment": "^2.29.4",
 		"react": "^18.2.0",
+		"react-chartjs-2": "^5.2.0",
 		"react-datepicker": "^4.15.0",
 		"react-dom": "^18.2.0",
 		"react-redux": "^8.1.1",
