--- a/task_buddies_react_app-main/package.json
+++ b/task_buddies_react_app-main/package.json
@@ -7,7 +7,8 @@
 		"dev": "vite",
 		"build": "vite build",
 		"lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"test": "jest"
 	},
 	"dependencies": {
 		"@fortawesome/fontawesome-svg-core": "^6.4.0",
@@ -29,13 +30,20 @@
 		"vite-plugin-sass": "^0.1.0"
 	},
 	"devDependencies": {
+		"@babel/preset-react": "^7.22.15",
+		"@nestjs/testing": "^10.2.4",
+		"@testing-library/jest-dom": "^6.1.3",
+		"@testing-library/react": "^14.0.0",
+		"@types/jest": "^29.5.4",
 		"@types/react": "^18.0.37",
 		"@types/react-dom": "^18.0.11",
 		"@vitejs/plugin-react": "^4.0.0",
+		"babel-jest": "^29.6.4",
 		"eslint": "^8.38.0",
 		"eslint-plugin-react": "^7.32.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-react-refresh": "^0.3.4",
+		"jest": "^29.6.4",
 		"vite": "^4.3.9"
 	}
 }
